--- a/_layouts/mem.html
+++ b/_layouts/mem.html
@@ -1,21 +1,78 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if (IE 7)&!(IEMobile)]><html class="no-js lt-ie9 lt-ie8" lang="en"><![endif]-->
+<!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9" lang="en"><![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"><!--<![endif]-->
+<head>
+{% include head.html %}
+</head>
 
-  {% include head.html %}
+<body id="page" {% if page.image.feature %}class="feature"{% endif %}>
 
-  <body>
+{% include browser-upgrade.html %}
+{% include navigation.html %}
 
-    {% include header.html %}
+{% if page.image.feature %}
+<div class="entry-header">
+  {% if page.image.credit %}<div class="image-credit">Image source: <a href="{{ page.image.creditlink }}">{{ page.image.credit }}</a></div><!-- /.image-credit -->{% endif %}
+  <div class="entry-image">
+    <img src="{{ site.url }}/images/{{ page.image.feature }}" alt="{{ page.title }}">
+  </div><!-- /.entry-image -->
+</div><!-- /.entry-header -->
+{% endif %}
 
-    <div class="page-content">
-      <div class="wrapper">
-      <p> {{ page.name }} </p>
-      <p> {{ page.ability }} </p>
-      </div>
-    </div>
+<div id="main" role="main">
+  <article class="hentry">
+    <header class="header-title">
+      <div class="header-title-wrap">
+        <h1 class="entry-title">{{ page.name }}</h1>
+        {% if site.reading_time %}
+        <p class="entry-reading-time">
+          <i class="fa fa-clock-o"></i>
+          {% assign readtime = content | number_of_words | divided_by:site.words_per_minute %}
+          Reading time ~{% if readtime <= 1 %}1 minute{% else %}{{ readtime }} minutes{% endif %}
+        </p><!-- /.entry-reading-time -->
+        {% endif %}
+      </div><!-- /.header-title-wrap -->
+    </header>
+    <div class="entry-content">
+     <!-- {{ content }} -->
+     <p>  Name: {{ page.name }} </p>
+     <p>  Mentor: {{ page.mentor }} </p>
+     <p>  Gender: {{ page.gender }} </p>
+     <p>  Personality: {{ page.personality }} </p>
+     <p>  Movement Type: {{ page.movement }} </p>
+     <p>  Super Power: {{ page.ability }} </p>
+     <p>  Level: {{ page.level }} </p>
+     <p>  Combat Rating: {{ page.cr }} </p>
+     <p>  PVP CR: {{ page.pvp }} </p>
+     <p>  Health: {{ page.health }} </p>
+     <p>  Power: {{ page.power }} </p>
+     <p>  Defense: {{ page.defense }} </p>
+     <p>  Toughness: {{ page.toughness }} </p>
+     <p>  Might: {{ page.might }} </p>
+     <p>  Precision: {{ page.precision }} </p>
+     <p>  Restoration: {{ page.restoration }} </p>
+     <p>  Vitalization: {{ page.vital }}  </p>
+     <p>  Dominance: {{ page.dominance }} </p>
+     <p>  Skill Points: {{ page.skill }} </p>
+      <footer class="entry-meta">
+        {% if page.modified %}<span>Updated on <span class="entry-date date published updated"><time datetime="{{ page.modified }}">{{ page.modified | date: "%B %d, %Y" }}</time></span></span>
+        <span class="author vcard"><span class="fn">{{ site.owner.name }}</span></span>{% endif %}
+        {% if page.share != false %}{% include social-share.html %}{% endif %}
+      </footer>
+    </div><!-- /.entry-content -->
+    {% if page.comments != false %}<section id="disqus_thread"></section><!-- /#disqus_thread -->{% endif %}
+  </article>
+</div><!-- /#main -->
 
+<div class="footer-wrapper">
+  <footer role="contentinfo">
     {% include footer.html %}
+  </footer>
+</div><!-- /.footer-wrapper -->
 
-  </body>
+{% include scripts.html %}          
 
+</body>
 </html>
