--- a/_layouts/mem.html
+++ b/_layouts/mem.html
@@ -40,7 +40,7 @@
         <div><b> Name: </b></div>
       </div>
       <div style="width:33%, float:left;">
-        <p> page.name </p>
+        <div> {{ page.name }}</div>
       </div>
      <!-- {{ content }} -->
 <!--     <p>  Name: {{ page.name }} </p>
