--- a/_layouts/mem.html
+++ b/_layouts/mem.html
@@ -38,9 +38,45 @@
     <div class="entry-content">
       <div style="width:33%; float:left;">
         <div><b> Name: </b></div>
+        <div><b> Mentor: </b></div>
+        <div><b> Gender: </b></div>
+        <div><b> Personality: </b></div>
+        <div><b> Movement Type: </b></div>
+        <div><b> Super Power: </b></div>
+        <div><b> Level: </b></div>
+        <div><b> Combat Rating: </b></div>
+        <div><b> PVP CR: </b></div>
+        <div><b> Health: </b></div>
+        <div><b> Power: </b></div>
+        <div><b> Defense: </b></div>
+        <div><b> Toughness: </b></div>
+        <div><b> Might: </b></div>
+        <div><b> Precision: </b></div>
+        <div><b> Restoration: </b></div>
+        <div><b> Vitalization: </b></div>
+        <div><b> Dominance: </b></div>
+        <div><b> Skill Points: </b></div>
       </div>
       <div style="width:33%, float:left;">
         <div> {{ page.name }}</div>
+        <div> {{ page.mentor }}</div>
+        <div> {{ page.gender }}</div>
+        <div> {{ page.personality }}</div>
+        <div> {{ page.movement }}</div>
+        <div> {{ page.ability }}</div>
+        <div> {{ page.level }}</div>
+        <div> {{ page.cr }}</div>
+        <div> {{ page.pvp }}</div>
+        <div> {{ page.health }}</div>
+        <div> {{ page.power }}</div>
+        <div> {{ page.defense }}</div>
+        <div> {{ page.toughness }}</div>
+        <div> {{ page.might }}</div>
+        <div> {{ page.precision }}</div>
+        <div> {{ page.restoration }}</div>
+        <div> {{ page.vital }}</div>
+        <div> {{ page.dominance }}</div>
+        <div> {{ page.skill }}</div>
       </div>
      <!-- {{ content }} -->
 <!--     <p>  Name: {{ page.name }} </p>
