--- a/_layouts/mem.html
+++ b/_layouts/mem.html
@@ -70,7 +70,7 @@
         <div> {{ page.health }}</div>
         <div> {{ page.power }}</div>
         <div> {{ page.defense }}</div>
-        <div> {{ page.toughness }}</div>
+        <div> {{ page.tough }}</div>
         <div> {{ page.might }}</div>
         <div> {{ page.precision }}</div>
         <div> {{ page.restoration }}</div>
